<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/bgApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewQuestion1"
                style="@style/cardQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardCornerRadius">

                <LinearLayout
                    style="@style/questionBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question1" />

                    <RadioGroup
                        android:id="@+id/Question1"
                        style="@style/questionCtrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/question1_1"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question1_1" />

                        <!-- right answer-->
                        <RadioButton
                            android:id="@+id/question1_2"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question1_2" />

                        <RadioButton
                            android:id="@+id/question1_3"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question1_3" />

                        <RadioButton
                            android:id="@+id/question1_4"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question1_4" />

                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewQuestion2"
                style="@style/cardQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/questionBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question2" />

                    <RadioGroup
                        android:id="@+id/Question2"
                        style="@style/questionCtrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/question2_1"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question2_1" />

                        <RadioButton
                            android:id="@+id/question2_2"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question2_2" />

                        <RadioButton
                            android:id="@+id/question2_3"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question2_3" />

                        <!-- right answer -->
                        <RadioButton
                            android:id="@+id/question2_4"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question2_4" />

                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewQuestion3"
                style="@style/cardQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/questionBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question3" />

                    <!-- right answer -->
                    <CheckBox
                        android:id="@+id/Question3_1"
                        style="@style/radioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question3_1" />

                    <CheckBox
                        android:id="@+id/Question3_2"
                        style="@style/radioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question3_2" />

                    <!-- right answer -->
                    <CheckBox
                        android:id="@+id/Question3_3"
                        style="@style/radioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question3_3" />

                    <CheckBox
                        android:id="@+id/Question3_4"
                        style="@style/radioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question3_4" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewQuestion4"
                style="@style/cardQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/questionBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question4" />

                    <EditText
                        android:id="@+id/Question4"
                        style="@style/textQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter the name" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewQuestion5"
                style="@style/cardQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/questionBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question5" />

                    <RadioGroup
                        android:id="@+id/Question5"
                        style="@style/questionCtrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/question5_1"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question5_1" />

                        <RadioButton
                            android:id="@+id/question5_2"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question5_2" />
                        <!-- right answer -->
                        <RadioButton
                            android:id="@+id/question5_3"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question5_3" />

                        <RadioButton
                            android:id="@+id/question5_4"
                            style="@style/radioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question5_4" />

                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                style="@style/btnApp"
                android:onClick="onSubmit"
                android:text="@string/btnSubmit"></Button>

            <Button
                style="@style/btnApp"
                android:onClick="onReset"
                android:text="@string/btnReset"></Button>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
