<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/bgApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.quizapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center" />

            <ImageView
                style="@style/imgView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flag" />

            <EditText
                android:id="@+id/editName"
                style="@style/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enterName" />

            <Button
                android:id="@+id/btnStart"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startQuiz"
                android:text="@string/startQuiz" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
